@@ -1,0 +1,20 @@
+#! /bin/sh
+
+# Copyright (C) 2014 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+echo && echo "*** omfonts -help"
+./omfonts -help || exit 1
+
+echo && echo "*** ofm2opl -help"
+./omfonts -ofm2opl -char=foo -num=bar -text=baz -help || exit 1
+
+echo && echo "*** opl2ofm -help"
+./omfonts -opl2ofm -char=num -num=hex -text=mixed -help || exit 1
+
+echo && echo "*** ovf2ovp -help"
+./omfonts -ovf2ovp -char=foo -num=bar -text=baz -help || exit 1
+
+echo && echo "*** ovp2ovf -help"
+./omfonts -ovp2ovf -char=ascii -num=octal -text=upper -help || exit 1
+
