@@ -355,7 +355,7 @@ begin
       else if strcmp (optarg, 'hex') = 0 then
         charcode_format := charcode_hex
       else
-        write_ln (stderr, 'Bad character code format', stringcast(optarg), '.');
+        write_ln (stderr, 'Bad character code format ', stringcast(optarg), '.');
 
     end; {Else it was a flag; |getopt| has already done the assignment.}
   until getopt_return_val = -1;
